--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "concurrently 'yarn serve' 'wait-on http://localhost:4000 && yarn electron-start'",
+    "start": "concurrently \"yarn serve\" \"wait-on http://localhost:8080 && yarn electron-start\"",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "concurrently": "^4.1.0",
-    "electron": "^4.0.4",
+    "electron": "^7.1.2",
     "vue": "^2.5.22",
     "wait-on": "^3.2.0"
   },
